# hyperxi_lab

./: .gitignore  .pyproject.toml.swp  README.md  README_proof_pipeline.md  automorphism_sensitive_invariants.txt  base_edge_pair_relation.txt  build_spec.sh  commutators.txt  compare_twisted_vs_untwisted_pair_lifts.txt  decagon_fiber_cocycle.txt  decagon_icosahedron_test.txt  distance_class_split.txt  distance_regular_tests.txt  generator_cycles.txt  identify_pair_graph.txt  inspect_local_operator.txt  intersection_array_candidate.txt  pair_decagon_incidence.txt  pair_fiber_graph_invariants.txt  pair_fiber_operator.txt  pair_vs_decagon.txt  petrie_operator.txt  pyproject.toml  quotient_base_graph_by_opposition.txt  reconstruct_vertex_connection.txt  sheet_flip_involution.txt  triangle_anchored_symmetry.txt  word_orbits.txt  word_orders.txt
aether_lab/: README_IMPORTS.md  README_RUNNER_NOTE.md  load_thalean_graph.py  run_all.py
cocycles/: main.tex
kernel/: thalean_kernel.v1.json
manuscript/: macros.tex  main.tex  notation.tex
notes/: 2026-03-13_petersen_spinorial_transport.md  2026-03-14_chamber_holonomy_on_first_excited_eigenspace.md  2026-03-14_decagon_phase_holonomy.md  2026-03-14_effective_signature_operator.md  2026-03-14_electron_program.md  2026-03-14_exact_minusI_blocks.md  2026-03-14_extended_signature_quotient_32blocks.md  2026-03-14_generator_sign_sectors_in_Hloc.md  2026-03-14_low_block_parity_adjacency.md  2026-03-14_minusI_upstairs_families.md  2026-03-14_pair_transport_low_modes.md  2026-03-14_petersen_cover_canonicality.md  combined_notes.md  (+24 more)
(+988 files in other folders)
