[project]
name = "hyperxi"
version = "0.1.0"
description = "HyperXi discrete transport simulator on the {5,3,4} lattice"
authors = [
  {name = "Scott Cave"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy"
]

[project.scripts]
hyperxi-viewer = "hyperxi.viewer.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
